--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                               </div>
 
                                      <div class="card"> &#128532; 
-                                           <div class="text"> I'm <br> Sorry <br> <!--In place of star you guys can write NAME-->***** </div>&#128532;
+                                           <div class="text"> I'm <br> Really Sorry betu <br> <!--In place of star you guys can write NAME--> </div>&#128532;
                                            <div class="card_emoji" style="font-size: 50px;">&#128532;</div>
                                           </div>
                         
